fixed z-index issue

--- a/app/assets/stylesheets/_layout_backup.css
+++ b/app/assets/stylesheets/_layout_backup.css
@@ -32,7 +32,6 @@ li
   width: 100%
   height: 100%
   position: absolute
-  z-index: 100045
   left: 0px
   top: 0px
 
@@ -87,6 +86,7 @@ li
     position: absolute
     top: $content-top
     line-height: $line-height
+    z-index: 2
     .shadowed
       text-shadow: 1px 1px 1px rgba(0,0,0, 0.9) 
     
