--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -78,7 +78,6 @@ li
   width: 100%
   height: 100%
   position: absolute
-  z-index: 100045
   left: 0px
   top: 0px
 
@@ -114,6 +113,7 @@ li
   position: absolute
   top: $content-top
   line-height: $line-height
+  z-index: 2
   .shadowed
     text-shadow: 1px 1px 1px rgba(0,0,0, 0.9) 
   
